# dataset

./: .gitattributes  .gitignore  README.md  filter_comments.py  preprocess_swe_care.py  pyproject.toml  rerun_empty_diff.py  run_agent_resolution.py  run_batch_agent_resolution.py  run_batch_baselines.py  run_batch_filter.py  run_batch_testgen.py  run_batch_tool_eval.py  run_testgen.py  run_testgen_full.sh  run_tool_eval.py
execution/: .gitignore  README.md  __init__.py  build_log_checks.py  build_swe_care.py  container_runtime.py  docker_env.py  make_dataset.py  python_version.py  specs.py
execution/assets/: swe_care_ignores.json  swe_care_images_test_report.json  swe_care_language_overrides.json  uv
execution/assets/swe_care_build_overrides/apache__airflow/161c96c/: install_deps.sh
execution/assets/swe_care_build_overrides/apache__airflow/58b343a/: install_deps.sh
execution/assets/swe_care_build_overrides/apache__airflow/cf0c9a6/: post_install.sh
execution/assets/swe_care_build_overrides/pandas-dev__pandas/: 05b4fbb  0bdc8ed  4aca787  59d4145  d6a2d5b  de64663
execution/assets/swe_care_build_overrides/scipy__scipy/: 4fcbd8b  df1fef2
execution/tests/: test_swe_care_images.py
pipeline/: agent_resolver.py  comment_filter.py  dataset_utils.py  diff_analyzer.py  llm_client.py  preprocess.py  test_generator.py  test_runner.py
results_analysis/: categorization.ipynb  filter_results_eval_by_resolved_comments.py
results_pipeline_funnel/: summary.json
results_preprocessed/: instance-ids.txt
(+77 files in other folders)
